force-app/main/default/objects/Account_Roles__c/Account_Roles__c.object-meta.xml
<CustomObject>
    <label>Account Roles</label>
    <nameField>
        <displayFormat>AR-{0000}</displayFormat>
        <label>Account Roles Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>