force-app/main/default/objects/Account_Roles__c/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Roles</relationshipLabel>
    <relationshipName>Account_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>