force-app/main/default/objects/Account_Roles__c/fields/Account_Name_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Lookup__c</fullName>
    <formula>Account_ID__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name Lookup</label>
    <type>Text</type>
</CustomField>