force-app/main/default/objects/Account_Roles__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>Property_ID__r.Address_Line_1__c +&apos;,&apos;+ Property_ID__r.Address_Line_2__c +&apos;,&apos;+  Property_ID__r.City__c +&apos;,&apos;+   Property_ID__r.State__c +&apos;,&apos;+  Property_ID__r.County__c +&apos;,&apos;+   Property_ID__r.Zip__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>