force-app/main/default/objects/Account_Roles__c/fields/Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Account Roles</relationshipLabel>
    <relationshipName>Account_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>