force-app/main/default/objects/Account_Roles__c/fields/Master_Job_ID__c.field-meta.xml
<CustomField>
    <fullName>Master_Job_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job ID</label>
    <referenceTo>ATI_Job__c</referenceTo>
    <relationshipLabel>Account Roles</relationshipLabel>
    <relationshipName>Account_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>