force-app/main/default/objects/Account_Roles__c/fields/Multiple_Roles__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Roles__c</fullName>
    <label>Roles</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary/Bill-to</fullName>
            </value>
            <value>
                <fullName>Caller</fullName>
            </value>
            <value>
                <fullName>Referred By</fullName>
            </value>
            <value>
                <fullName>Project Site Contact</fullName>
            </value>
            <value>
                <fullName>Property Owner</fullName>
            </value>
            <value>
                <fullName>Insurance Adjuster/Company</fullName>
            </value>
            <value>
                <fullName>Property/Facility Manager</fullName>
            </value>
            <value>
                <fullName>HOA</fullName>
            </value>
            <value>
                <fullName>Tenant</fullName>
            </value>
            <value>
                <fullName>Insurance Agent/Broker</fullName>
            </value>
            <value>
                <fullName>Independent Adjuster</fullName>
            </value>
            <value>
                <fullName>Attorney/Risk Manager/Public Adjuster</fullName>
            </value>
            <value>
                <fullName>Contractor/Consultant</fullName>
            </value>
            <value>
                <fullName>Stakeholder/Influencer</fullName>
            </value>
            <value>
                <fullName>Legacy</fullName>
            </value>
            <value>
                <fullName>Carrier Claims Adjuster</fullName>
                <isActive>false</isActive>
                <label>Carrier Claims Adjuster</label>
            </value>
            <value>
                <fullName>General Contractor</fullName>
                <isActive>false</isActive>
                <label>General Contractor</label>
            </value>
            <value>
                <fullName>Independent Claims Adjuster</fullName>
                <isActive>false</isActive>
                <label>Independent Claims Adjuster</label>
            </value>
            <value>
                <fullName>Influencer</fullName>
                <isActive>false</isActive>
                <label>Influencer</label>
            </value>
            <value>
                <fullName>Insurance Adjuster</fullName>
                <isActive>false</isActive>
                <label>Insurance Adjuster</label>
            </value>
            <value>
                <fullName>Insurance Broker</fullName>
                <isActive>false</isActive>
                <label>Insurance Broker</label>
            </value>
            <value>
                <fullName>Insurance carrier</fullName>
                <isActive>false</isActive>
                <label>Insurance carrier</label>
            </value>
            <value>
                <fullName>Property Manager</fullName>
                <isActive>false</isActive>
                <label>Property Manager</label>
            </value>
            <value>
                <fullName>Tenant Real Estimate / Facilities</fullName>
                <isActive>false</isActive>
                <label>Tenant Real Estimate / Facilities</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>