force-app/main/default/objects/Account_Roles__c/fields/Property_ID__c.field-meta.xml
<CustomField>
    <fullName>Property_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property ID</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Account Roles</relationshipLabel>
    <relationshipName>Account_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>