force-app/main/default/objects/Account_Roles__c/fields/Roles__c.field-meta.xml
<CustomField>
    <fullName>Roles__c</fullName>
    <label>Roles-old</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Property Owner</fullName>
            </value>
            <value>
                <fullName>Property Manager</fullName>
            </value>
            <value>
                <fullName>Tenant Real Estimate / Facilities</fullName>
            </value>
            <value>
                <fullName>Independent Claims Adjuster</fullName>
            </value>
            <value>
                <fullName>Carrier Claims Adjuster</fullName>
            </value>
            <value>
                <fullName>General Contractor</fullName>
            </value>
            <value>
                <fullName>Insurance carrier</fullName>
            </value>
            <value>
                <fullName>Insurance Broker</fullName>
            </value>
            <value>
                <fullName>Legacy</fullName>
            </value>
            <value>
                <fullName>Bill To</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>