force-app/main/default/objects/Account_Roles__c/fields/Timberline_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Timberline_Customer_Number__c</fullName>
    <formula>Account_ID__r.Timberline_Customer_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Timberline Customer Number</label>
    <type>Text</type>
</CustomField>