force-app/main/default/objects/Account_Roles__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Multiple_Roles__c</columns>
    <columns>Address__c</columns>
    <columns>Contact_ID__c</columns>
    <columns>Master_Job_ID__c</columns>
    <columns>Property_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>